# game_poll2

./: .gitignore  README.md  bot.py  clear_polls.py  config.json.template  deploy.sh  main.py  permanent_test.py  pyproject.toml  requirements.txt  restart.sh
.github/workflows/: code-coverage.yml
docker/: docker-compose.yml
factory/: names_to_games.py
games/: compile_json_files.py  compile_jsons_files.py  games.json.template  games_manager.py  insert_jsons.py  insert_jsons_2.py
libs/: admin.py  database.py  gamebot.py  gamebot_commands.py  games.py  guild.py  poll.py  poll_buttons.py  poll_embedding.py  poll_manager.py  poll_manager.py.old  poll_view.py
libs/add_game/: add_game_to_poll_view.py  add_game_user_dict.py  add_temporary_game.py  add_to_poll_button.py  respond_to_add_game_button.py
libs/add_game_to_poll/: add_to_poll.py  add_to_poll_button.py  add_to_poll_view.py  respond_to_add_game_button.py
libs/admin/: admin.py  admin_cog.py
libs/dat/: database.py  games.py  guild.py
libs/games/: games_cog.py
libs/guilds/: guilds_cog.py
libs/helpers/: buttons.py  views.py
libs/misc/: auto_refresh_poll.py  command_logger.py  gpt_test.py  project_root.py  schedule_poll.py  set_logging.py
mongo_docker/: docker-compose.yml
poll/: main.py
tests/: base.py  test_add_temporary_game.py  test_add_to_poll_button.py  test_admin.py  test_games_cog.py  test_guild.py  test_helpers.py  test_poll.py  test_poll_button.py  test_poll_cog.py  test_poll_embedding.py  test_poll_view.py  test_respond_to_add_game_button.py  test_voters_engine.py
tools/: clear_polls.py
(+134 files in other folders)
